media/sonarr/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sonarr
  labels:
    app: sonarr
