media/sonarr/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  annotations:
    flux.weave.works/tag.sonarr: glob:amd64-3*-ls*
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:amd64-3.0.1.407-ls35
        ports:
        - name: sonarr
          containerPort: 8989
        readinessProbe:
          tcpSocket:
            port: sonarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: sonarr
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: sonarr
          subPath: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: sonarr
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:sonarr
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: media
        persistentVolumeClaim:
          claimName: media
