media/sonarr/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app: sonarr
    version: v1
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      version: v1
  template:
    metadata:
      labels:
        app: sonarr
        rclone-mounts: "true"
        version: v1
    spec:
      serviceAccountName: sonarr

      dnsConfig:
        options:
          - name: ndots
            value: "1"

      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - pms
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: sonarr
          # IMAGE=ghcr.io/linuxserver/sonarr; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
          image: ghcr.io/linuxserver/sonarr:version-4.0.14.2939
          # image: alpine
          # command: ["sleep"]
          # args: ["infinity"]

          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              # cpu: "500m"
              memory: "2Gi"

          ports:
            - name: http
              containerPort: 8989

          # livenessProbe:
          #   exec:
          #     command:
          #       - sh
          #       - -c
          #       - test -f /media/.anchors/dropbox
          #   periodSeconds: 10
          #   failureThreshold: 3

          startupProbe:
            httpGet:
              port: http
              path: /
            periodSeconds: 10
            failureThreshold: 30

          volumeMounts:
            - name: sonarr
              subPath: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: scratch
              mountPath: /downloads
              subPath: downloads

      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr-pv-claim
        - name: scratch
          persistentVolumeClaim:
            claimName: scratch
        - name: media
          persistentVolumeClaim:
            claimName: media
