media/sonarr/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-tailscale
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - majestic-fear
  defaultBackend:
    service:
      name: sonarr
      port:
        name: http
  ingressClassName: tailscale
