media/sonarr/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr
spec:
  hosts:
    - sonarr
  http:
    - route:
        - destination:
            host: sonarr
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/media/sa/overseerr
              - cluster.local/ns/media/sa/heimdall
              - cluster.local/ns/ingress-nginx/sa/ingress-nginx
