media/sonarr/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sonarr
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: sonarr
  ingress:
  - ports:
    - port: http
    from: []
